# etheroot

./: Cargo.toml  README.md  alternative-approach.md
src/: lib.rs  mint.rs  mock.rs  test.rs
