[package]
name = "etheroot"
version = "0.1.0"
authors = ["Argochain Team"]
edition = "2021"
repository = "https://github.com/psyfercom/etheroot"

[dependencies]
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-evm = { workspace = true }
tokio = { version = "1.0", features = ["full"] }


[features]
default = ["std"]
std = [
    "frame-system/std",
    "pallet-evm/std",
    "tokio/default"
]
